--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-commercedemo_backend",
   "version": "1.0.0",
   "description": "Backend Api's for E-commerce Application",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm server.js",
